Added programs from Mac

--- a/programing_learning.ipynb
+++ b/programing_learning.ipynb
@@ -160,12 +160,52 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "##8 Kilometer to miles\n",
+    "km = float(input('Enter the distance in kilometer'))\n",
+    "conversion_factor = 0.621371\n",
+    "miles = km*conversion_factor\n",
+    "print(f'{km} kilometer is equal to {miles} miles')"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22.0 celcius in foriegnhieght is eual to 131.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "##9 celsious to forignhieght\n",
+    "Celsius = float(input('Enter the temperature in Celsius'))\n",
+    "foriegnhieght = (Celsius*9/2)+32\n",
+    "print(f'{Celsius} celcius in foriegnhieght is eual to {foriegnhieght}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##10 Display Calendar\n",
+    "import calendar\n",
+    "year = int(input('Enter Year'))\n",
+    "month = int(input('Enter month'))\n",
+    "cal = calendar.month(year,month)\n",
+    "print(cal)"
+   ]
   }
  ],
  "metadata": {
