--- a/programing_learning.ipynb
+++ b/programing_learning.ipynb
@@ -242,6 +242,24 @@
     "##13\n",
     "print('i am a good boy')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i am a good boy\n"
+     ]
+    }
+   ],
+   "source": [
+    "##14\n",
+    "print('i am a good boy')"
+   ]
   }
  ],
  "metadata": {
@@ -260,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
