Prog12 updated Mac

--- a/programing_learning.ipynb
+++ b/programing_learning.ipynb
@@ -209,56 +209,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello world\n"
+      "root 1: 0.0\n",
+      "root 2: -1.0\n"
      ]
     }
    ],
    "source": [
-    "##12\n",
-    "print('hello world')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "i am a good boy\n"
-     ]
-    }
-   ],
-   "source": [
-    "##13\n",
-    "print('i am a good boy')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "i am a good boy\n"
-     ]
-    }
-   ],
-   "source": [
-    "##14\n",
-    "print('i am a good boy')"
+    "##12 Quadric Formula\n",
+    "##input coefficients\n",
+    "import math\n",
+    "a = float(input(\"Enter coeffecient a\"))\n",
+    "b= float(input('Enter the coefficient of b'))\n",
+    "c = float(input('enter coefficient c'))\n",
+    "###Calculate descrimenent\n",
+    "discriminant = b**2-4*a*c\n",
+    "if discriminant > 0:\n",
+    "    root1 =(-b+math.sqrt(discriminant))/(2*a)\n",
+    "    root2 =(-b-math.sqrt(discriminant))/(2*a)\n",
+    "    print(f'root 1: {root1}')\n",
+    "    print(f'root 2: {root2}')\n",
+    "elif discriminant==0:\n",
+    "    root = -b/(2*a)\n",
+    "    print(f'root : {root}')\n",
+    "else:\n",
+    "    real_part = -b/(2*a)\n",
+    "    imaginary_part = math.sqrt(abs(discriminant))/(2*a)\n",
+    "    print(f'root 1: {real_part}+{imaginary_part}i')\n",
+    "    print(f'root 2: {real_part}-{imaginary_part}i')\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
