--- a/programing_learning.ipynb
+++ b/programing_learning.ipynb
@@ -338,6 +338,24 @@
     "##16 Leap Year\n",
     "print('hello world')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mera lan\n"
+     ]
+    }
+   ],
+   "source": [
+    "##Checking ## 17\n",
+    "print('mera lan')"
+   ]
   }
  ],
  "metadata": {
@@ -356,7 +374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
