Checking from Mac1

--- a/programing_learning.ipynb
+++ b/programing_learning.ipynb
@@ -330,6 +330,15 @@
     "##16\n",
     "print('hello world')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('my name is israr khaliq')"
+   ]
   }
  ],
  "metadata": {
