--- a/programing_learning.ipynb
+++ b/programing_learning.ipynb
@@ -323,12 +323,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024 is a Leap year\n"
+     ]
+    }
+   ],
    "source": [
-    "##16\n",
-    "print('hello world')"
+    "16##Leap Year\n",
+    "year = int(input('Enter the year: '))\n",
+    "\n",
+    "# Check if the year is a leap year\n",
+    "if (year % 4 == 0 and year % 100 != 0) or (year % 400 == 0):\n",
+    "    print('{0} is a Leap year'.format(year))\n",
+    "else:\n",
+    "    print('{0} is not a Leap year'.format(year))\n"
    ]
   },
   {
@@ -337,7 +351,83 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('my name is israr khaliq')"
+    "def add(x,y):\n",
+    "    return x+y\n",
+    "def subtract(x,y):\n",
+    "    return x-y\n",
+    "def multiply(x,y):\n",
+    "    return x*y\n",
+    "def divide(x,y):\n",
+    "   if y==0:\n",
+    "    return \"Error! Division By Zero\"\n",
+    "   else:\n",
+    "        return(x/y)\n",
+    "def calculator():\n",
+    "    while True:\n",
+    "        print(\"\\noOptions\")\n",
+    "        print('1.add')\n",
+    "        print('2.subtract')\n",
+    "        print('3.Multiply')\n",
+    "        print('4.Divide')\n",
+    "        print('5.exist')\n",
+    "\n",
+    "        choice =input(\"select an operation (1/2/3/4/5): \")\n",
+    "    \n",
+    "        if choice == 5 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add(x, y):\n",
+    "    return x + y\n",
+    "\n",
+    "def subtract(x, y):\n",
+    "    return x - y\n",
+    "\n",
+    "def multiply(x, y):\n",
+    "    return x * y\n",
+    "\n",
+    "def divide(x, y):\n",
+    "    if y == 0:\n",
+    "        return \"Error! Division by zero.\"\n",
+    "    else:\n",
+    "        return x / y\n",
+    "\n",
+    "def calculator():\n",
+    "    while True:\n",
+    "        print(\"\\nOptions:\")\n",
+    "        print(\"1. Add\")\n",
+    "        print(\"2. Subtract\")\n",
+    "        print(\"3. Multiply\")\n",
+    "        print(\"4. Divide\")\n",
+    "        print(\"5. Exit\")\n",
+    "        \n",
+    "        choice = input(\"Select an operation (1/2/3/4/5): \")\n",
+    "\n",
+    "        if choice == '5':\n",
+    "            print(\"Exiting the calculator. Goodbye!\")\n",
+    "            break\n",
+    "        \n",
+    "        num1 = float(input(\"Enter the first number: \"))\n",
+    "        num2 = float(input(\"Enter the second number: \"))\n",
+    "\n",
+    "        if choice == '1':\n",
+    "            print(f\"Result: {num1} + {num2} = {add(num1, num2)}\")\n",
+    "        elif choice == '2':\n",
+    "            print(f\"Result: {num1} - {num2} = {subtract(num1, num2)}\")\n",
+    "        elif choice == '3':\n",
+    "            print(f\"Result: {num1} * {num2} = {multiply(num1, num2)}\")\n",
+    "        elif choice == '4':\n",
+    "            print(f\"Result: {num1} / {num2} = {divide(num1, num2)}\")\n",
+    "        else:\n",
+    "            print(\"Invalid input. Please choose a valid option.\")\n",
+    "            \n",
+    "# Run the calculator\n",
+    "calculator()\n"
    ]
   }
  ],
@@ -357,7 +447,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
