--- a/programing_learning.ipynb
+++ b/programing_learning.ipynb
@@ -398,6 +398,23 @@
     "# Run the calculator\n",
     "calculator()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('hello world')"
+   ]
   }
  ],
  "metadata": {
@@ -416,7 +433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
