--- a/programing_learning.ipynb
+++ b/programing_learning.ipynb
@@ -415,6 +415,23 @@
    "source": [
     "print('hello world')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "checking python Venv push\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('checking python Venv push')"
+   ]
   }
  ],
  "metadata": {
@@ -433,7 +450,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
