--- a/programing_learning.ipynb
+++ b/programing_learning.ipynb
@@ -301,21 +301,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "could not convert string to float: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m####15 Even & Odd number Sepration\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m num \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mfloat\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mEnter the number\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m num\u001b[38;5;241m%\u001b[39m\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThis is even number\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mValueError\u001b[0m: could not convert string to float: ''"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "####15 Even & Odd number Sepration\n",
     "num = float(input('Enter the number'))\n",
@@ -355,6 +343,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "##17 Calculator\n",
     "def add(x, y):\n",
     "    return x + y\n",
     "\n",
@@ -402,6 +391,64 @@
     "# Run the calculator\n",
     "calculator()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "109,is a prime number\n"
+     ]
+    }
+   ],
+   "source": [
+    "##18 To Find Prime number\n",
+    "num =float(input('Enter the First '))\n",
+    "flag = False\n",
+    "if num.is_integer() and num>1:\n",
+    "    num=int(num)\n",
+    "    for i in range(2,num):\n",
+    "        if (num%i)==0:\n",
+    "            flag = True\n",
+    "            break\n",
+    "if flag:\n",
+    "    print(f'{num}, is not a prime number') \n",
+    "else:\n",
+    "    print(f'{num},is a prime number')       \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##19 Program For Table\n",
+    "num =int (input('display the multyplication table:'))\n",
+    "for i in range(1,11):\n",
+    "    print(f'{num}X{i}={num*i}') \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##20 Fiboconi Sequence\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -420,7 +467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
