--- a/programing_learning.ipynb
+++ b/programing_learning.ipynb
@@ -436,11 +436,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fibonacci sequence upto:\n",
+      "0\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n",
+      "13\n",
+      "21\n",
+      "34\n"
+     ]
+    }
+   ],
    "source": [
-    "##20 Fiboconi Sequence\n"
+    "##20 Fiboconi Sequence\n",
+    "nterms =int(input('How many terms?'))\n",
+    "#first two terms\n",
+    "n1,n2 =0,1\n",
+    "count =0\n",
+    "if nterms <=0:\n",
+    "    print(\"Please enter a positive integer\")\n",
+    "elif nterms ==1:\n",
+    "    print(\"Fibonacci sequence upto\",nterms,\":\")\n",
+    "    print(n1)\n",
+    "else:\n",
+    "    print(\"Fibonacci sequence upto:\")\n",
+    "    while count<nterms:\n",
+    "        print(n1)\n",
+    "        nth =n1+n2\n",
+    "        n1=n2\n",
+    "        n2 =nth\n",
+    "        count += 1\n",
+    "        \n"
    ]
   },
   {
@@ -448,7 +484,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "##21"
+   ]
   }
  ],
  "metadata": {
