--- a/programing_learning.ipynb
+++ b/programing_learning.ipynb
@@ -436,27 +436,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fibonacci sequence upto:\n",
-      "0\n",
-      "1\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "5\n",
-      "8\n",
-      "13\n",
-      "21\n",
-      "34\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "##20 Fiboconi Sequence\n",
     "nterms =int(input('How many terms?'))\n",
@@ -481,11 +463,77 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22 is not  an ARmstrong Number.\n"
+     ]
+    }
+   ],
+   "source": [
+    "##21 ArmStrong Number\n",
+    "num = int(input(\"Enter a number\"))\n",
+    "#calculate no of digits in the string\n",
+    "num_str =str(num)\n",
+    "num_digit = len(num_str)\n",
+    "sum_of_powers =0 \n",
+    "temp_num = num\n",
+    "while temp_num>0:\n",
+    "    digit =temp_num%10\n",
+    "    sum_of_powers += digit**num_digit\n",
+    "    temp_num //= 10.\n",
+    "if sum_of_powers ==num:\n",
+    "    print(f'{num} is an ARmstrong Number.')\n",
+    "else:\n",
+    "             print(f'{num} is not  an ARmstrong Number.')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "##21"
+    "##22 Armstrg No in an Interval\n",
+    "lower = int(input('Enter the lower limit of interval:'))\n",
+    "upper = int(input('Enter the upper limit of interval:'))\n",
+    "for num in range (lower,upper +1):\n",
+    "    order =len(str(num))\n",
+    "    temp_num =num\n",
+    "    sum=0\n",
+    "    while temp_num >0:\n",
+    "        digit =temp_num%10\n",
+    "        sum += digit **order\n",
+    "        temp_num //= 10\n",
+    "        if num== sum:\n",
+    "            print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sum of natural numbers upto 10 is: 55\n"
+     ]
+    }
+   ],
+   "source": [
+    "#23 sum of Natural numbers\n",
+    "limit = int(input(\"Enter the linit:\"))\n",
+    "sum =0\n",
+    "for i in range (1,limit+1):\n",
+    "    sum+=i\n",
+    "print('The sum of natural numbers upto',limit,'is:',sum)"
    ]
   }
  ],
