Today Project Mac

--- a/programing_learning.ipynb
+++ b/programing_learning.ipynb
@@ -535,6 +535,81 @@
     "    sum+=i\n",
     "print('The sum of natural numbers upto',limit,'is:',sum)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##24\n",
+    "# Initialize an empty to-do list\n",
+    "todo_list = []\n",
+    "\n",
+    "# Function to display the menu\n",
+    "def show_menu():\n",
+    "    print(\"\\nMenu:\")\n",
+    "    print(\"1. Add Task\")\n",
+    "    print(\"2. View Tasks\")\n",
+    "    print(\"3. Mark Task as Completed\")\n",
+    "    print(\"4. Remove Task\")\n",
+    "    print(\"5. Exit\")\n",
+    "\n",
+    "# Function to add a task\n",
+    "def add_task():\n",
+    "    task = input(\"Enter the task: \")\n",
+    "    todo_list.append({\"task\": task, \"completed\": False})\n",
+    "    print(f\"Task '{task}' added.\")\n",
+    "\n",
+    "# Function to view all tasks\n",
+    "def view_tasks():\n",
+    "    if not todo_list:\n",
+    "        print(\"No tasks in the list.\")\n",
+    "    else:\n",
+    "        print(\"\\nTo-Do List:\")\n",
+    "        for index, task_info in enumerate(todo_list):\n",
+    "            status = \"Completed\" if task_info[\"completed\"] else \"Not Completed\"\n",
+    "            print(f\"{index + 1}. {task_info['task']} - {status}\")\n",
+    "\n",
+    "# Function to mark a task as completed\n",
+    "def mark_completed():\n",
+    "    view_tasks()\n",
+    "    task_num = int(input(\"Enter the task number to mark as completed: \")) - 1\n",
+    "    if 0 <= task_num < len(todo_list):\n",
+    "        todo_list[task_num][\"completed\"] = True\n",
+    "        print(f\"Task '{todo_list[task_num]['task']}' marked as completed.\")\n",
+    "    else:\n",
+    "        print(\"Invalid task number.\")\n",
+    "\n",
+    "# Function to remove a task\n",
+    "def remove_task():\n",
+    "    view_tasks()\n",
+    "    task_num = int(input(\"Enter the task number to remove: \")) - 1\n",
+    "    if 0 <= task_num < len(todo_list):\n",
+    "        removed_task = todo_list.pop(task_num)\n",
+    "        print(f\"Task '{removed_task['task']}' removed.\")\n",
+    "    else:\n",
+    "        print(\"Invalid task number.\")\n",
+    "\n",
+    "# Main program loop\n",
+    "while True:\n",
+    "    show_menu()\n",
+    "    choice = input(\"Enter your choice (1-5): \")\n",
+    "    \n",
+    "    if choice == '1':\n",
+    "        add_task()\n",
+    "    elif choice == '2':\n",
+    "        view_tasks()\n",
+    "    elif choice == '3':\n",
+    "        mark_completed()\n",
+    "    elif choice == '4':\n",
+    "        remove_task()\n",
+    "    elif choice == '5':\n",
+    "        print(\"Exiting the program.\")\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"Invalid choice. Please select a valid option.\")\n"
+   ]
   }
  ],
  "metadata": {
@@ -553,7 +628,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
