--- a/programing_learning.ipynb
+++ b/programing_learning.ipynb
@@ -613,62 +613,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Alice has passed with a score of 78.\n",
-      "Bob has failed with a score of 45.\n",
-      "Charlie has passed with a score of 60.\n",
-      "Daisy has failed with a score of 30.\n",
-      "Eve has passed with a score of 90.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Function to calculate grades\n",
-    "def grade_calculator(students_scores):\n",
-    "    for student, score in students_scores.items():\n",
-    "        if score >= 50:\n",
-    "            print(f\"{student} has passed with a score of {score}.\")\n",
-    "        else:\n",
-    "            print(f\"{student} has failed with a score of {score}.\")\n",
-    "\n",
-    "# Sample input data: a dictionary of students and their scores\n",
-    "students_scores = {\n",
-    "    \"Alice\": 78,\n",
-    "    \"Bob\": 45,\n",
-    "    \"Charlie\": 60,\n",
-    "    \"Daisy\": 30,\n",
-    "    \"Eve\": 90\n",
-    "}\n",
-    "\n",
-    "# Call the function\n",
-    "grade_calculator(students_scores)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Alicehas passed with a score of 78.\n",
-      "bob has failed with a score 45\n",
-      "rownnakhas passed with a score of 60.\n",
-      "Daisy has failed with a score 30\n",
-      "Evehas passed with a score of 90.\n"
-     ]
-    }
-   ],
-   "source": [
-    "##Function to Calculate grades\n",
+    "25##Function to Calculate grades\n",
     "def grade_calculator(students_score):\n",
     "    for students, score in students_score.items():\n",
     "        if score>=50:\n",
