--- a/programing_learning.ipynb
+++ b/programing_learning.ipynb
@@ -616,6 +616,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "25##Function to Calculate grades\n",
     "def grade_calculator(students_score):\n",
@@ -636,6 +643,97 @@
     "\n",
     "#Call the function\n",
     "grade_calculator(students_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thank you for playing\n",
+      "Weelcome to the number guessing game\n",
+      "I have selected a number between 1 and 100.Can you guess it?\n",
+      "Number is too Low\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Guessing the number game \n",
+    "import random\n",
+    "def guessing_game():\n",
+    "    print('Weelcome to the number guessing game')\n",
+    "    print('I have selected a number between 1 and 100.Can you guess it?')\n",
+    "    number_to_guess = random.randint(1,100)\n",
+    "    attempts = 0\n",
+    "    while True:\n",
+    "            try:\n",
+    "                user_input =int(input('Enter your guess'))\n",
+    "                attempts += 1\n",
+    "                if user_input<number_to_guess:\n",
+    "                    print('Number is too Low')\n",
+    "                elif user_input>number_to_guess:\n",
+    "                    print(\"Number is too high\")\n",
+    "                else: \n",
+    "                    print(f'Congratulaions Idiot! you guessed in {attempts} attempts.')\n",
+    "                break\n",
+    "            except ValueError:\n",
+    "                print('invalid input!please enter a valid integer')\n",
+    "print('Thank you for playing')\n",
+    "\n",
+    "guessing_game()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the Number Guessing Game!\n",
+      "I have selected a number between 1 and 100. Can you guess it?\n",
+      "Too low! Try again.\n",
+      "Too low! Try again.\n",
+      "Congratulations! You guessed it in 3 attempts.\n",
+      "Thank you for playing!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "def guessing_game():\n",
+    "    print(\"Welcome to the Number Guessing Game!\")\n",
+    "    print(\"I have selected a number between 1 and 100. Can you guess it?\")\n",
+    "    \n",
+    "    number_to_guess = random.randint(1, 3)\n",
+    "    attempts = 0\n",
+    "    \n",
+    "    while True:\n",
+    "        try:\n",
+    "            user_input = int(input(\"Enter your guess: \"))\n",
+    "            attempts += 1\n",
+    "            \n",
+    "            if user_input < number_to_guess:\n",
+    "                print(\"Too low! Try again.\")\n",
+    "            elif user_input > number_to_guess:\n",
+    "                print(\"Too high! Try again.\")\n",
+    "            else:\n",
+    "                print(f\"Congratulations! You guessed it in {attempts} attempts.\")\n",
+    "                break\n",
+    "        except ValueError:\n",
+    "            print(\"Invalid input! Please enter a valid integer.\")\n",
+    "    \n",
+    "    print(\"Thank you for playing!\")\n",
+    "\n",
+    "# Run the game\n",
+    "guessing_game()\n"
    ]
   }
  ],
