--- a/programing_learning.ipynb
+++ b/programing_learning.ipynb
@@ -662,7 +662,7 @@
     }
    ],
    "source": [
-    "# Guessing the number game \n",
+    "#26 Guessing the number game \n",
     "import random\n",
     "def guessing_game():\n",
     "    print('Weelcome to the number guessing game')\n",
@@ -689,28 +689,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Welcome to the Number Guessing Game!\n",
-      "I have selected a number between 1 and 100. Can you guess it?\n",
-      "Too low! Try again.\n",
-      "Too low! Try again.\n",
-      "Congratulations! You guessed it in 3 attempts.\n",
-      "Thank you for playing!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#27 guessing the number game\n",
     "import random\n",
     "\n",
     "def guessing_game():\n",
     "    print(\"Welcome to the Number Guessing Game!\")\n",
-    "    print(\"I have selected a number between 1 and 100. Can you guess it?\")\n",
+    "    print(\"I have selected a number between 1 and 100. Can you guess it?\")s\n",
     "    \n",
     "    number_to_guess = random.randint(1, 3)\n",
     "    attempts = 0\n",
@@ -734,6 +722,46 @@
     "\n",
     "# Run the game\n",
     "guessing_game()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#28 Reverse a string\n",
+    "def reverse_string(s):\n",
+    "    return s[::-1]\n",
+    "#test the function\n",
+    "input_string = input('Enter a string:')\n",
+    "print('Reverse String:',reverse_string(input_string))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum number : 44\n"
+     ]
+    }
+   ],
+   "source": [
+    "#29 Finding maximum number\n",
+    "def find_max(numbers):\n",
+    "    max_num = numbers[0]\n",
+    "    for num in numbers:\n",
+    "        if num >max_num:\n",
+    "            max_num = num\n",
+    "    return  max_num        \n",
+    "#test the functuin\n",
+    "numbers_list = list(map(int,input('Enter the numbers seprated by space: ').split()))\n",
+    "print(\"Maximum number :\",find_max(numbers_list))            "
    ]
   }
  ],
