--- a/programing_learning.ipynb
+++ b/programing_learning.ipynb
@@ -740,17 +740,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Maximum number : 44\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#29 Finding maximum number\n",
     "def find_max(numbers):\n",
@@ -762,6 +754,43 @@
     "#test the functuin\n",
     "numbers_list = list(map(int,input('Enter the numbers seprated by space: ').split()))\n",
     "print(\"Maximum number :\",find_max(numbers_list))            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#30 Simple Calculator\n",
+    "def calculator():\n",
+    "    print('Welcome to the israr calculator')\n",
+    "    print('choose and option please')\n",
+    "    print('1.Addition')\n",
+    "    print('2.Subtratction')\n",
+    "    print('3.Multiplication')\n",
+    "    print('4.Devision')\n",
+    "\n",
+    "    choice = input('Enter the number of Your choice 1/2/3/4: ')\n",
+    "    if choice in ['1','2','3','4']:\n",
+    "        num1 = float(input('Enter the First number'))\n",
+    "        num2 = float(input('Enter The seconed number'))\n",
+    "        if choice == '1':\n",
+    "            print(f'The result is : {num1+num2}')\n",
+    "        elif choice =='2':\n",
+    "            print(f'subtratction result is : {num1-num2}')\n",
+    "        elif choice == '3':\n",
+    "            print(f'Multiplication result is : {num1*num2}')\n",
+    "        elif choice == '4' :\n",
+    "            if num2 != 0:\n",
+    "                print(f'Devision result is :  {num1/num2}')\n",
+    "            else:\n",
+    "                print('Error as zero is like dick will not work')\n",
+    "    else:             \n",
+    "        print('Invalid operation try again')\n",
+    "\n",
+    "calculator()\n",
+    "    "
    ]
   }
  ],
