--- a/programing_learning.ipynb
+++ b/programing_learning.ipynb
@@ -792,6 +792,29 @@
     "calculator()\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Result is 112\n"
+     ]
+    }
+   ],
+   "source": [
+    "#31Calculate Multyplication and sum pf two numbers\n",
+    "num1 = int(input('Enter the first number'))\n",
+    "num2 = int(input('Enter the seconed number'))\n",
+    "if num1*num2 >1000:\n",
+    "    print(f'The Result is',num1+num2)\n",
+    "else:\n",
+    "      print(f'The rsult is ',num1*num2)"
+   ]
   }
  ],
  "metadata": {
