--- a/programing_learning.ipynb
+++ b/programing_learning.ipynb
@@ -815,6 +815,59 @@
     "else:\n",
     "      print(f'The rsult is ',num1*num2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ch 1 \n",
+    "# Module = code by someone else but we use in our programs\n",
+    "# Comment = we can commnet by control forward slash\n",
+    "import pyjokes\n",
+    "joke =pyjokes.get_joke()\n",
+    "print(joke)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ch 2\n",
+    "# print twinkle twinklew little star by using single line ''''\n",
+    "\n",
+    "print('''Song Lyrics\n",
+    "Twinkle twinkle little star.\n",
+    "How I wonder what you are.\n",
+    "Up above the world so high.\n",
+    "Like a diamond in the sky.\n",
+    "Twinkle twinkle little star.\n",
+    "How I wonder what you are.\n",
+    "\n",
+    "Twinkle twinkle little star.\n",
+    "How I wonder what you are.\n",
+    "Up above the world so high.\n",
+    "Like a diamond in the sky.\n",
+    "Twinkle twinkle little star.\n",
+    "How I wonder what you are.\n",
+    "\n",
+    "''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyttsx3\n",
+    "engine = pyttsx3.init()\n",
+    "engine.say(\"I will speak this text and gando\")\n",
+    "engine.runAndWait()"
+   ]
   }
  ],
  "metadata": {
