--- a/programing_learning.ipynb
+++ b/programing_learning.ipynb
@@ -873,8 +873,282 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration: 0\n",
+      "Iteration: 1\n",
+      "Iteration: 2\n",
+      "Iteration: 3\n",
+      "Iteration: 4\n",
+      "Count: 0\n",
+      "Count: 1\n",
+      "Count: 2\n",
+      "Count: 3\n",
+      "Count: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ch 1\n",
+    "# Python Basics\n",
+    "# Python is a high-level, interpreted programming language.\n",
+    "# It is known for its simplicity and readability.\n",
+    "# Python can be used for various applications, including web development, data analysis, artificial intelligence, and more.\n",
+    "# Python is an open-source language, which means it is free to use and distribute.\n",
+    "# Python supports multiple programming paradigms, including procedural, object-oriented, and functional programming.\n",
+    "# Python has a large standard library that provides many useful modules and functions.\n",
+    "# Python is dynamically typed, meaning you don't need to declare variable types explicitly.\n",
+    "# Python uses indentation to define code blocks, which makes the code more readable.\n",
+    "# Python supports both procedural and object-oriented programming.\n",
+    "# Python has a large and active community, which means there are many resources and libraries available for developers.\n",
+    "# Python is cross-platform, meaning it can run on various operating systems like Windows, macOS, and Linux.\n",
+    "# Python is widely used in data science, machine learning, web development, automation, and more.\n",
+    "# Python Basics\n",
+    "\n",
+    "# Ch 2\n",
+    "# Variables = used to store data\n",
+    "# Variables can hold different data types, such as integers, floats, strings, and booleans.\n",
+    "# Example of variables\n",
+    "a = 5\n",
+    "b = 10\n",
+    "print(type(a))\n",
+    "print(type(b))\n",
+    "\n",
+    "# Ch 3\n",
+    "# Variable = a container to store data\n",
+    "# Data Types = int, float, string, boolean\n",
+    "# int = whole number\n",
+    "# float = decimal number\n",
+    "# string = text             \n",
+    "# boolean = True or False\n",
+    "\n",
+    "# Ch 4\n",
+    "# String = a sequence of characters\n",
+    "# String Methods = functions that can be applied to strings\n",
+    "# Example of string methods\n",
+    "name = \"Israr Ahmed\"\n",
+    "print(name.upper())  # Convert to uppercase\n",
+    "print(name.lower())  # Convert to lowercase\n",
+    "print(name.title())  # Convert to title case\n",
+    "print(name.replace(\"Israr\", \"Ahmed\"))  # Replace a substring\n",
+    "print(name.split())  # Split the string into a list of words # Convert string to float\n",
+    "print(h)  # This will raise an error because \"Israr Ahmed\" cannot be converted to float\n",
+    "\n",
+    "# Ch 5\n",
+    "# Type Conversion = converting one data type to another\n",
+    "# Example of type conversion\n",
+    "h = \"Israr Ahmed\"\n",
+    "# try:\n",
+    "h = float(h)  # Convert string to float\n",
+    "# except ValueError:\n",
+    "print(\"Cannot convert string to float. Please provide a valid number.\")\n",
+    "\n",
+    "# Ch 6\n",
+    "# Arithmetic Operators = +, -, *, /, %, //, **\n",
+    "# Example of arithmetic operators\n",
+    "num1 = 10\n",
+    "num2 = 3\n",
+    "print(\"Addition:\", num1 + num2)  # Addition\n",
+    "print(\"Subtraction:\", num1 - num2)  # Subtraction\n",
+    "print(\"Multiplication:\", num1 * num2)  # Multiplication\n",
+    "print(\"Division:\", num1 / num2)  # Division\n",
+    "print(\"Modulus:\", num1 % num2)  # Modulus\n",
+    "print(\"Floor Division:\", num1 // num2)  # Floor Division\n",
+    "print(\"Exponentiation:\", num1 ** num2)  # Exponentiation\n",
+    "\n",
+    "# Ch 7\n",
+    "# Comparison Operators = ==, !=, >, <, >=, <=\n",
+    "# Example of comparison operators\n",
+    "num1 = 10\n",
+    "num2 = 5\n",
+    "print(\"Is num1 equal to num2?\", num1 == num2)  # Equal to\n",
+    "print(\"Is num1 not equal to num2?\", num1 != num2)  # Not equal to\n",
+    "print(\"Is num1 greater than num2?\", num1 > num2)  # Greater than\n",
+    "print(\"Is num1 less than num2?\", num1 < num2)  # Less than\n",
+    "print(\"Is num1 greater than or equal to num2?\", num1 >= num2)  # Greater than or equal to\n",
+    "print(\"Is num1 less than or equal to num2?\", num1 <= num2)  # Less than or equal to\n",
+    "\n",
+    "# Ch 8\n",
+    "# Logical Operators = and, or, not\n",
+    "# Example of logical operators\n",
+    "a = True\n",
+    "b = False\n",
+    "print(\"a and b:\", a and b)  # Logical AND \n",
+    "print(\"a or b:\", a or b)  # Logical OR\n",
+    "print(\"not a:\", not a)  # Logical NOT\n",
+    "\n",
+    "# Ch 9\n",
+    "# Conditional Statements = if, elif, else\n",
+    "# Example of conditional statements\n",
+    "num = 10\n",
+    "if num > 0:\n",
+    "    print(\"The number is positive.\")\n",
+    "elif num < 0:\n",
+    "    print(\"The number is negative.\")\n",
+    "else:\n",
+    "    print(\"The number is zero.\")\n",
+    "\n",
+    "# Ch 10\n",
+    "# Loops = for loop, while loop\n",
+    "# Example of for loop\n",
+    "for i in range(5):\n",
+    "    print(\"Iteration:\", i)\n",
+    "# Example of while loop\n",
+    "count = 0\n",
+    "while count < 5:\n",
+    "    print(\"Count:\", count)\n",
+    "    count += 1\n",
+    "\n",
+    "# Ch 11\n",
+    "# Functions = reusable blocks of code\n",
+    "def greet(name):\n",
+    "    print(\"Hello,\", name)\n",
+    "# Example of function call\n",
+    "greet(\"Israr Ahmed\")\n",
+    "\n",
+    "# Ch 12\n",
+    "# Lists = ordered collection of items\n",
+    "fruits = [\"apple\", \"banana\", \"cherry\"]\n",
+    "# Example of list operations\n",
+    "print(\"Fruits:\", fruits)\n",
+    "# Adding an item to the list\n",
+    "fruits.append(\"orange\")\n",
+    "print(\"After adding orange:\", fruits)\n",
+    "# Removing an item from the list\n",
+    "fruits.remove(\"banana\")\n",
+    "print(\"After removing banana:\", fruits)\n",
+    "# Accessing items in the list\n",
+    "print(\"First fruit:\", fruits[0])\n",
+    "\n",
+    "# Ch 13\n",
+    "# Tuples = ordered, immutable collection of items\n",
+    "my_tuple = (1, 2, 3)\n",
+    "# Example of tuple operations\n",
+    "print(\"My Tuple:\", my_tuple)\n",
+    "# Accessing items in the tuple\n",
+    "print(\"First item in tuple:\", my_tuple[0])\n",
+    "\n",
+    "# Ch 14\n",
+    "# Dictionaries = collection of key-value pairs\n",
+    "my_dict = {\"name\": \"Israr\", \"age\": 25, \"city\": \"Karachi\"}\n",
+    "# Example of dictionary operations\n",
+    "print(\"My Dictionary:\", my_dict)\n",
+    "# Accessing values in the dictionary\n",
+    "print(\"Name:\", my_dict[\"name\"])\n",
+    "# Adding a new key-value pair to the dictionary\n",
+    "my_dict[\"country\"] = \"Pakistan\"\n",
+    "print(\"After adding country:\", my_dict)\n",
+    "# Removing a key-value pair from the dictionary\n",
+    "del my_dict[\"age\"]\n",
+    "print(\"After removing age:\", my_dict)\n",
+    "\n",
+    "# Ch 15\n",
+    "# Sets = unordered collection of unique items\n",
+    "my_set = {1, 2, 3, 4, 5}\n",
+    "# Example of set operations\n",
+    "print(\"My Set:\", my_set)\n",
+    "# Adding an item to the set\n",
+    "my_set.add(6)\n",
+    "print(\"After adding 6:\", my_set)\n",
+    "# Removing an item from the set\n",
+    "my_set.remove(3)\n",
+    "print(\"After removing 3:\", my_set)\n",
+    "\n",
+    "# Ch 16\n",
+    "# File Handling = reading and writing files\n",
+    "def write_to_file(filename, content):\n",
+    "    with open(filename, 'w') as file:\n",
+    "        file.write(content)\n",
+    "def read_from_file(filename):\n",
+    "    with open(filename, 'r') as file:\n",
+    "        return file.read()\n",
+    "# Example of file handling\n",
+    "write_to_file(\"example.txt\", \"Hello, this is a sample file.\")\n",
+    "print(\"Content of the file:\", read_from_file(\"example.txt\"))\n",
+    "\n",
+    "# Ch 17\n",
+    "# Exception Handling = handling errors gracefully\n",
+    "def divide_numbers(num1, num2):\n",
+    "    try:\n",
+    "        return num1 / num2\n",
+    "    except ZeroDivisionError:\n",
+    "        return \"Error: Division by zero is not allowed.\"\n",
+    "    except Exception as e:\n",
+    "        return f\"An error occurred: {e}\"\n",
+    "# Example of exception handling\n",
+    "result = divide_numbers(10, 0)\n",
+    "print(\"Result of division:\", result)\n",
+    "\n",
+    "# Ch 18\n",
+    "# Classes and Objects = Object-Oriented Programming (OOP) concepts\n",
+    "class Dog:\n",
+    "    def __init__(self, name, age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "\n",
+    "    def bark(self):\n",
+    "        print(f\"{self.name} says Woof!\")\n",
+    "# Example of creating an object and calling a method\n",
+    "my_dog = Dog(\"Buddy\", 3)\n",
+    "my_dog.bark()\n",
+    "\n",
+    "# Ch 19\n",
+    "# Inheritance = creating a new class based on an existing class\n",
+    "class Animal:\n",
+    "    def __init__(self, species):\n",
+    "        self.species = species\n",
+    "\n",
+    "    def make_sound(self):\n",
+    "        print(f\"{self.species} makes a sound.\")\n",
+    "class Dog(Animal):\n",
+    "    def __init__(self, name, age):\n",
+    "        super().__init__(\"Dog\")\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "\n",
+    "    def bark(self):\n",
+    "        print(f\"{self.name} says Woof!\")\n",
+    "# Example of inheritance\n",
+    "my_dog = Dog(\"Buddy\", 3)\n",
+    "my_dog.bark()\n",
+    "my_dog.make_sound()\n",
+    "\n",
+    "# Ch 20\n",
+    "# Polymorphism = using the same method name in different classes\n",
+    "class Cat(Animal):\n",
+    "    def __init__(self, name, age):\n",
+    "        super().__init__(\"Cat\")\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "\n",
+    "    def make_sound(self):\n",
+    "        print(f\"{self.name} says Meow!\")\n",
+    "# Example of polymorphism\n",
+    "def animal_sound(animal):\n",
+    "    animal.make_sound()\n",
+    "# Example of polymorphism\n",
+    "my_cat = Cat(\"Whiskers\", 2)\n",
+    "animal_sound(my_dog)  # Calls Dog's make_sound method\n",
+    "animal_sound(my_cat)  # Calls Cat's make_sound method\n",
+    "\n",
+    "# Ch 21\n",
+    "# Modules and Packages = organizing code into reusable components\n",
+    "# Example of importing a module\n",
+    "import math\n",
+    "print(\"Square root of 16:\", math.sqrt(16))\n",
+    "\n",
+    "# Ch 22\n",
+    "# Regular Expressions = pattern matching in strings\n",
+    "import re\n",
+    "def find_email_addresses(text):\n",
+    "    pattern = r'[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}'\n",
+    "    return re.findall(pattern, text)\n",
+    "# Example of using regular expressions\n",
+    "# text = \"Contact u                                          \n"
+   ]
   }
  ],
  "metadata": {
